2023/01/12
- Added filter by damage type
- Fixed bug

2023/01/11
- Fixed link input
IM SORRY I BROKE THIS LAST WEEK AND DIDNT KNOW :(
- Added emote for import failure
- Added warning message for import backup

2023/01/10
- Hide beginner and golden thread pulls if empty

2023/01/09
- Fixed aliEn T image
- Fleshed out characters page
- Added character count data
- Added afflatus images
- Reworded export/import backup

2023/01/08
- Updated character data
- Added character images

2023/01/07
- Fixed The Ever-Flowing banner image

2023/01/03
- Added export/import data

2023/01/02
- Changed summon history data structure
- Added 50/50 win rate for 5*s

2023/12/31
- Fleshed out Settings page

2023/12/30
- Updated banner images
- Created Invitation From The Water section
- Created sidebar
- Created Settings and Characters pages
- Fixed directions for iOS

2023-12-29
- Created beginner banner section
- Changed Changeling to Jessica

2023-12-27
- Added filter by banner
- Added JSON as input

2023-12-26
- Updated auto import page

2023-12-25
- Added list of 6*s under banner stats

2023-12-24
- Added 50/50 win rate and guarantee

2023-12-22
- Added filter by rarity

2023-12-17
- Added show/hide banner history

2023-12-16
- Created banner history

2023-12-14
- Website created